# rust-wasm-gltf

./: .gitignore  Cargo.toml  README.md  flake.nix  index.html  index.js  package-lock.json  webpack.config.js
gltf/: IridescenceLamp.glb
src/: lib.rs
